2019-09-18  Richard Sandiford  <richard.sandiford@arm.com>

	* gimplify.c (gimplify_decl_expr): Use poly_int_tree_p instead
	of checking specifically for INTEGER_CST.

2019-09-18  Richard Sandiford  <richard.sandiford@arm.com>

	* stor-layout.c (compute_record_mode): Operate on poly_uint64
	sizes instead of uhwi sizes.

2019-09-18  Richard Sandiford  <richard.sandiford@arm.com>

	* dwarf2out.c (loc_list_from_tree_1): Handle POLY_INT_CST.
	(add_const_value_attribute): Handle CONST_POLY_INT.

2019-09-18  Martin Liska  <mliska@suse.cz>

	* dbgcnt.def (store_merging): New counter.
	* gimple-ssa-store-merging.c (imm_store_chain_info::output_merged_stores):
	Use it in store merging.

2019-09-17  Richard Sandiford  <richard.sandiford@arm.com>

	* config/aarch64/aarch64.c (aarch64_sched_variable_issue): New
	function.
	(TARGET_SCHED_VARIABLE_ISSUE): New macro.
	* config/arm/arm.c (arm_sched_variable_issue): New function.
	(TARGET_SCHED_VARIABLE_ISSUE): New macro.

2019-09-17  Richard Sandiford  <richard.sandiford@arm.com>

	* config/arm/types.md (no_reservation): New reservation.
	* config/aarch64/falkor.md (falkor_other_0_nothing): Don't handle
	no_insn here.
	* config/aarch64/saphira.md (saphira_other_0_nothing): Likewise.
	* config/aarch64/thunderx2t99.md (thunderx2t99_nothing): Likewise.
	* config/aarch64/tsv110.md (tsv110_alu): Likewise.
	* config/arm/arm1020e.md (1020alu_op): Likewise.
	* config/arm/arm1026ejs.md (alu_op): Likewise.
	* config/arm/arm1136jfs.md (11_alu_op): Likewise.
	* config/arm/arm926ejs.md (9_alu_op): Likewise.
	* config/arm/cortex-a15.md (cortex_a15_alu): Likewise.
	* config/arm/cortex-a17.md (cortex_a17_alu): Likewise.
	* config/arm/cortex-a5.md (cortex_a5_alu): Likewise.
	* config/arm/cortex-a53.md (cortex_a53_alu): Likewise.
	* config/arm/cortex-a57.md (cortex_a57_alu): Likewise.
	* config/arm/cortex-a7.md (cortex_a7_alu_shift): Likewise.
	* config/arm/cortex-a8.md (cortex_a8_alu): Likewise.
	* config/arm/cortex-a9.md (cortex_a9_dp): Likewise.